Release 1.0.2 [PREVIEW] - [SNAPSHOT_003]
- Verbesserte Validierung (Doppelte Elementnamen/Attribute/Methoden sind nicht mehr erlaubt, Fehlerhafte Eingaben werden hervorgehoben)

- Speicheroptimierung (Es wird weniger Arbeitsspeicher benötigt)